Wed Dec 11 20:49:11 GMT 2002  Olly Betts <olly@survex.com>

	* api/omdatabaseinternal.cc,include/om/omdatabase.h,tests/api_db.cc:
	  Reimplemented stub databases in the new scheme of things.
	* backends/inmemory/: fully disabled inmemory_errornext and
	  inmemory_abortnext code.

Tue Dec 10 13:47:44 GMT 2002  Olly Betts <olly@survex.com>

	* HACKING: Added note that Bison 1.50 seems to work with Xapian's
	  .yy files.

Mon Dec 09 20:13:00 GMT 2002  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/omenquireinternal.h,docs/todo.xml,
	  include/om/omenquire.h,tests/api_db.cc: OmEnquire::get_eset()
	  now takes a flags argument of bit constants |-ed together
	  instead of 2 bools.

Mon Dec 09 12:52:38 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: Applied patch
	  from Martin Porter with better fix for sequential addition bug.

Mon Dec 09 09:57:42 GMT 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Mon Dec 09 07:32:46 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartztest.cc: Corrected name of database used
	  by test adddoc2 (was using testdb_adddoc1!)

Mon Dec 09 05:10:09 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc,backends/quartz/quartz_table.cc:
	  More fettling.

Mon Dec 09 04:48:39 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/: Minor code fettle.

Mon Dec 09 03:32:11 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Gratuitous layout fettling.

Mon Dec 09 03:30:27 GMT 2002  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Improved wording and punctuation in 3
	  places.

Mon Dec 09 03:25:09 GMT 2002  Olly Betts <olly@survex.com>

	* common/,docs/todo.xml,include/om/omenquire.h,matcher/,
	  net/socketclient.cc,net/socketserver.cc,netprogs/omprogsrv.cc,
	  netprogs/omtcpsrv.cc: Fixed the remote backend to handle non-default
	  weighting schemes.  You can now even implement your own weighting